--- a/00-recap/src/index.css
+++ b/00-recap/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.avatar {
+  margin: 20px;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.name {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.profilepic {
+  width: 100px;
+  height: auto;
 }
