Add helperAPI for pokemon-project

--- a/00-recap/00-solution/src/index.css
+++ b/00-recap/00-solution/src/index.css
@@ -18,3 +18,10 @@
   width: 100px;
   height: auto;
 }
+
+
+img {
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+}
