--- a/00-recap/00-solution/src/index.css
+++ b/00-recap/00-solution/src/index.css
@@ -1,25 +1,24 @@
-#root {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
+#root > div {
+  display: inline-block;
 }
 
 .avatar {
+  display: inline-block;
   margin: 20px;
   text-align: center;
 }
 
 .name {
   font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'VT323', monospace;
 }
 
 .profilepic {
   width: 100px;
-  height: auto;
-}
-
-img {
+  height: 100px;
+  object-fit: contain;
   image-rendering: pixelated;
   image-rendering: crisp-edges;
   image-rendering: -moz-crisp-edges;
